Body changed to fix navbar overlapping content

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,6 @@
 .navbar-lewagon {
   justify-content: space-between;
-  background: white;
+  background: #4B17FA;
 }
 
 .navbar-lewagon .navbar-collapse {
